--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>SZ CORP | Ingeniería Automotriz multimarca, Valle de los Chillos</title>
     <meta charset="utf-8">
 	<meta name="Robots" content="NOODP"/>
-    <meta name="description" content="Aire Acondicionado, Taller Automotriz, Taller Mecanico, Mecanica Automotriz, Motores, Frenos, Cambio de Aceite, Baterias, Valle de los Chillos, Sangolqui">
+    <meta name="description" content="Taller SZ CORP en el Valle de los Chillos. Expertos en reparación de motores, aire acondicionado y mantenimiento multimarca. ¡Diagnóstico confiable!">
     <meta name="keywords" content="automotriz del valle, taller automotriz, taller mecanico, mecanica automotriz, motores, frenos, cambio de aceite, baterias, caja de cambios, aire acondicionado, valle de los chillos, sangolqui, quito">
     <meta name="author" content="sumakatzu">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
@@ -532,5 +532,6 @@
     <script src="js/core.min.js"></script>
     <script src="js/script.js"></script>
   </body>
+
 
 </html>
