--- a/servicios.html
+++ b/servicios.html
@@ -200,7 +200,7 @@
               <div class="owl-carousel" data-autoplay="true" data-items="1" data-lg-items="2" data-dots="true" data-nav="false" data-stage-padding="15" data-loop="true" data-margin="30" data-mouse-drag="false">
                 <blockquote class="quote-default text-left">
                   <h6 class="small-xs">
-                    <q>“Recomiendo ZS CORP. Tenía una avería en mi auto y solucionaron em problema dentro de los 30 minutos de la llamada de servicio. Gracias por un trabajo tan profesional!”</q>
+                    <q>“Recomiendo SZ CORP. Tenía una avería en mi auto y solucionaron em problema dentro de los 30 minutos de la llamada de servicio. Gracias por un trabajo tan profesional!”</q>
                   </h6>
                   <div class="offset-top-30 offset-md-top-45">
                     <div class="unit flex-row align-items-sm-center">
@@ -352,5 +352,6 @@
     <script src="js/core.min.js"></script>
     <script src="js/script.js"></script>
   </body>
+
 
 </html>
