--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
 	<meta name="Robots" content="NOODP"/>
     <meta name="description" content="Aire Acondicionado, Taller Automotriz, Taller Mecanico, Mecanica Automotriz, Motores, Frenos, Cambio de Aceite, Baterias, Valle de los Chillos, Sangolqui">
-    <meta name="keywords" content="automotriz del valle, taller automotriz, taller mecanico, mecanica automotriz, motores, frenos, cambio de aceite, baterias, caja de cambios, aire acondicionado, valle de los chillos, sangolqui, quito">
+    <meta name="keywords" content="szcorp, taller automotriz, gruas valle, gruas quito, winchas, winchas valle, winchas quito, automotriz del valle, taller automotriz, taller mecanico, mecanica automotriz, motores, frenos, cambio de aceite, baterias, caja de cambios, aire acondicionado, valle de los chillos, sangolqui, quito">
     <meta name="author" content="sumakatzu">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -628,3 +628,4 @@
   </body>
 
 </html>
+
