--- a/contactenos.html
+++ b/contactenos.html
@@ -2,6 +2,9 @@
 <html class="wide wow-animation" lang="es">
 <head>
     <title>SZ CORP | Contáctenos y Agenda tu Cita</title>
+    <link rel="icon" type="image/jpg" href="images/szfavicon.jpg">
+    <link rel="apple-touch-icon" href="images/szfavicon.jpg">
+    <link rel="shortcut icon" href="images/szfavicon.jpg" type="image/x-icon">
     <meta charset="utf-8">
     <meta name="Robots" content="NOODP"/>
     <meta name="description" content="Ubícanos en el Valle de los Chillos. Agenda tu cita para mantenimiento, reparación de motor o compra de repuestos.">
@@ -330,3 +333,4 @@
     </script>
   </body>
 </html>
+
