--- a/gruas.html
+++ b/gruas.html
@@ -2,6 +2,9 @@
 <html class="wide wow-animation" lang="es">
 <head>
     <title>SZ CORP | Servicio de Grúas 24/7 y Asistencia Vial</title>
+    <link rel="icon" type="image/jpg" href="images/szfavicon.jpg">
+    <link rel="apple-touch-icon" href="images/szfavicon.jpg">
+    <link rel="shortcut icon" href="images/szfavicon.jpg" type="image/x-icon">
     <meta charset="utf-8">
     <meta name="Robots" content="NOODP"/>
     <meta name="description" content="Servicio de grúa plataforma, rescate vehicular y asistencia vial 24/7 en el Valle de los Chillos y Quito. ¡Llegamos rápido!">
@@ -441,4 +444,5 @@
     <script src="js/core.min.js"></script>
     <script src="js/script.js"></script>
 </body>
+
 </html>
