--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <!-- Site Title-->
     <title>SZ CORP | Ingeniería Automotriz multimarca, Valle de los Chillos</title>
+	<link rel="icon" type="image/jpg" href="images/szfavicon.jpg">
+    <link rel="apple-touch-icon" href="images/szfavicon.jpg">
+    <link rel="shortcut icon" href="images/szfavicon.jpg" type="image/x-icon">
     <meta charset="utf-8">
 	<meta name="Robots" content="NOODP"/>
     <meta name="description" content="Aire Acondicionado, Taller Automotriz, Taller Mecanico, Mecanica Automotriz, Motores, Frenos, Cambio de Aceite, Baterias, Valle de los Chillos, Sangolqui">
@@ -628,4 +631,5 @@
   </body>
 
 </html>
+
 
