--- a/reparaciones.html
+++ b/reparaciones.html
@@ -2,6 +2,9 @@
 <html class="wide wow-animation" lang="es">
 <head>
     <title>SZ CORP | Reparación de Motores y Transmisiones</title>
+    <link rel="icon" type="image/jpg" href="images/szfavicon.jpg">
+    <link rel="apple-touch-icon" href="images/szfavicon.jpg">
+    <link rel="shortcut icon" href="images/szfavicon.jpg" type="image/x-icon">
     <meta charset="utf-8">
     <meta name="Robots" content="NOODP"/>
     <meta name="description" content="Reparación especializada de Motores, Cabezotes, Cajas de Cambio, Transmisiones y Suspensión en Valle de los Chillos.">
@@ -397,3 +400,4 @@
     <script src="js/script.js"></script>
   </body>
 </html>
+
