--- a/repuestos.html
+++ b/repuestos.html
@@ -2,6 +2,9 @@
 <html class="wide wow-animation" lang="es">
 <head>
     <title>SZ CORP | Venta de Repuestos Automotrices</title>
+    <link rel="icon" type="image/jpg" href="images/szfavicon.jpg">
+    <link rel="apple-touch-icon" href="images/szfavicon.jpg">
+    <link rel="shortcut icon" href="images/szfavicon.jpg" type="image/x-icon">
     <meta charset="utf-8">
     <meta name="Robots" content="NOODP"/>
     <meta name="description" content="Repuestos originales y alternos: Aceites, Filtros, Frenos, Suspensión, Embrague. Valle de los Chillos.">
@@ -366,3 +369,4 @@
     <script src="js/script.js"></script>
   </body>
 </html>
+
