--- a/servicios.html
+++ b/servicios.html
@@ -2,6 +2,9 @@
 <html class="wide wow-animation" lang="es">
 <head>
     <title>SZ CORP | Servicios de Ingeniería Automotriz</title>
+    <link rel="icon" type="image/jpg" href="images/szfavicon.jpg">
+    <link rel="apple-touch-icon" href="images/szfavicon.jpg">
+    <link rel="shortcut icon" href="images/szfavicon.jpg" type="image/x-icon">
     <meta charset="utf-8">
     <meta name="Robots" content="NOODP"/>
     <meta name="description" content="Diagnóstico por scanner, ABC de motor, Frenos, Suspensión, Electricidad automotriz en Valle de los Chillos.">
@@ -368,3 +371,4 @@
   </body>
 
 </html>
+
