--- a/gruas.html
+++ b/gruas.html
@@ -138,7 +138,7 @@
             
             <div class="col-md-6 col-lg-4">
               <div class="service-box text-center">
-                <img class="img-responsive center-block offset-bottom-20" src="images/grua/grua-fondo.jpg.png" alt="Grúa de plataforma de SZ CORP" style="max-height: 300px; border-radius: 11px;">
+                <img class="img-responsive center-block offset-bottom-20" src="images/grua/grua-fondo.webp" alt="Grúa de plataforma de SZ CORP" style="max-height: 300px; border-radius: 11px;">
                 
                 <h5>Remolque Seguro (Plataforma)</h5>
                 <p class="text-gray-darker">Grúas de plataforma (cama plana) ideales para no dañar la tracción ni la suspensión de tu vehículo. Perfecto para autos bajos o automáticos.</p>
@@ -447,4 +447,5 @@
 </body>
 
 </html>
+
 
