--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 	
     <meta charset="utf-8">
 	<meta name="Robots" content="NOODP"/>
-    <meta name="description" content="Aire Acondicionado, Taller Automotriz, Taller Mecanico, Mecanica Automotriz, Motores, Frenos, Cambio de Aceite, Baterias, Valle de los Chillos, Sangolqui">
-    <meta name="keywords" content="szcorp, taller automotriz, gruas valle, gruas quito, winchas, winchas valle, winchas quito, automotriz del valle, taller automotriz, taller mecanico, mecanica automotriz, motores, frenos, cambio de aceite, baterias, caja de cambios, aire acondicionado, valle de los chillos, sangolqui, quito">
-    <meta name="author" content="sumakatzu">
+	<meta name="description" content="Taller mecánico especializado en el Valle de los Chillos y Quito. Ofrecemos ingeniería automotriz, servicio de grúas 24/7, aire acondicionado y mantenimiento multimarca. ¡Calidad y confianza para su vehículo!">
+	<meta name="keywords" content="szcorp, taller mecanico quito, ingeniería automotriz valle de los chillos, gruas 24 horas sangolqui, winchas quito, mantenimiento preventivo autos, reparacion motores diesel, abc de frenos, aire acondicionado automotriz">
+    <meta name="author" content="NORMAN UQUILLAS">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     
@@ -117,7 +117,7 @@
       </header>
       <div class="swiper-container swiper-slider swiper-secondary" data-autoplay="7500" data-height="100vh" data-min-height="300px">
         <div class="swiper-wrapper text-left">
-      <div class="swiper-slide" data-slide-bg="images/grua/grua-fondo.jpg.png">
+      <div class="swiper-slide" data-slide-bg="images/grua/grua-fondo.webp">
             <div class="swiper-slide-caption">
               <div class="container">
                 <div class="row section-100-vh align-items-sm-center justify-content-sm-center">
@@ -633,6 +633,7 @@
   </body>
 
 </html>
+
 
 
 
