--- a/contactenos.html
+++ b/contactenos.html
@@ -5,10 +5,13 @@
     <link rel="icon" type="image/jpg" href="images/szfavicon.jpg">
     <link rel="apple-touch-icon" href="images/szfavicon.jpg">
     <link rel="shortcut icon" href="images/szfavicon.jpg" type="image/x-icon">
+
     
     <meta charset="utf-8">
-    <meta name="Robots" content="NOODP"/>
+   
     <meta name="description" content="Ubícanos en el Valle de los Chillos. Agenda tu cita para mantenimiento, reparación de motor o compra de repuestos.">
+    <meta name="keywords" content="szcorp, taller mecanico quito, ingeniería automotriz valle de los chillos, gruas 24 horas sangolqui, winchas quito, mantenimiento preventivo autos, reparacion motores diesel, abc de frenos, aire acondicionado automotriz">
+    <meta name="author" content="NORMAN UQUILLAS">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     
@@ -334,5 +337,6 @@
     </script>
   </body>
 </html>
+
 
 
