--- a/reparaciones.html
+++ b/reparaciones.html
@@ -7,8 +7,10 @@
     <link rel="shortcut icon" href="images/szfavicon.jpg" type="image/x-icon">
     
     <meta charset="utf-8">
-    <meta name="Robots" content="NOODP"/>
+    
     <meta name="description" content="Reparación especializada de Motores, Cabezotes, Cajas de Cambio, Transmisiones y Suspensión en Valle de los Chillos.">
+    <meta name="keywords" content="reparacion de motores diesel y gasolina, arreglo de cabezotes quito, reparacion de caja de cambios, mantenimiento de diferenciales, rectificacion de motores valle de los chillos, reparacion de transmisiones, mecanica mayor">
+    <meta name="author" content="NORMAN UQUILLAS">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
    
@@ -401,5 +403,6 @@
     <script src="js/script.js"></script>
   </body>
 </html>
+
 
 
