--- a/repuestos.html
+++ b/repuestos.html
@@ -7,8 +7,10 @@
     <link rel="shortcut icon" href="images/szfavicon.jpg" type="image/x-icon">
     
     <meta charset="utf-8">
-    <meta name="Robots" content="NOODP"/>
+    
     <meta name="description" content="Repuestos originales y alternos: Aceites, Filtros, Frenos, Suspensión, Embrague. Valle de los Chillos.">
+    <meta name="keywords" content="venta de repuestos automotrices quito, repuestos originales valle de los chillos, baterias para autos sangolqui, pastillas de freno, kits de embrague, filtros y lubricantes automotrices, venta de accesorios autos">
+    <meta name="author" content="NORMAN UQUILLAS">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
   
@@ -370,5 +372,6 @@
     <script src="js/script.js"></script>
   </body>
 </html>
+
 
 
