--- a/servicios.html
+++ b/servicios.html
@@ -7,8 +7,10 @@
     <link rel="shortcut icon" href="images/szfavicon.jpg" type="image/x-icon">
     
     <meta charset="utf-8">
-    <meta name="Robots" content="NOODP"/>
-    <meta name="description" content="Diagnóstico por scanner, ABC de motor, Frenos, Suspensión, Electricidad automotriz en Valle de los Chillos.">
+    <
+    <meta name="description" content="Conozca nuestros servicios de ingeniería automotriz: mantenimiento preventivo, diagnóstico electrónico, aire acondicionado y más en nuestro taller multimarca..">
+    <meta name="keywords" content="mantenimiento vehicular quito, abc de motor, cambio de aceite y filtros, limpieza de inyectores, diagnostico electronico con escaner, carga de aire acondicionado automotriz, abc de frenos, chequeo preventivo autos">
+    <meta name="author" content="NORMAN UQUILLAS">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     
@@ -372,5 +374,6 @@
   </body>
 
 </html>
+
 
 
